examples of use - updated

--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -19,7 +19,7 @@ html, body {
     background-color: white;
     width: 590px;
     margin: 30px auto 30px auto;
-    padding: 60px;
+    padding: 30px 60px 60px 60px;
     border: 1px solid #d2d2d2;
 }
 
