--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -37,17 +37,17 @@ header blockquote {
 
 h1, h2 {
     color: #333333;
-    font-weight: 900;
+    font-weight: 700;
 }
 
 h1 {
-    padding: 0 90px 0 90px;
+    padding: 0 100px 0 100px;
     font-size: 52px;
     line-height: 1;
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 26px;
 }
 
 h3 {
@@ -67,10 +67,15 @@ label {
 a {
     text-decoration: none;
     color: #59a6d6;
+    outline: none;
 }
 
 a:hover {
     color: #646464;
+}
+
+:focus {
+    -moz-outline-style: none;
 }
 
 .github img {
@@ -200,9 +205,8 @@ button.blue-pill.deactivated:hover {
 
 .rating-b .bar-rating a {
     display: block;
-    width: 80px;
-    padding: 5px 0 5px 0;
-    height: 8px;
+    width: 70px;
+    height: 16px;
     float: left;
     background-color: #e3e3e3;
     margin: 1px;
@@ -303,4 +307,30 @@ button.blue-pill.deactivated:hover {
 .rating-e .bar-rating a.selected {
     background-color: #59a6d6;
     color: white;
+}
+
+/******* EXAMPLE F *******/
+
+.rating-f .bar-rating a {
+    background: url('../img/star.png');
+    width: 24px;
+    height: 24px;
+    display: block;
+    float: left;
+}
+
+.rating-f .bar-rating a:hover,
+.rating-f .bar-rating a.active,
+.rating-f .bar-rating a.selected {
+    background-position: 0 24px;
+}
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio : 1.5),
+(min-resolution: 192dpi) {
+    .rating-f .bar-rating a {
+        background: url('../img/star@2x.png');
+        background-size: 24px 48px;
+    }
 }
