--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -1,402 +1,383 @@
-html, body {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.6;
-    background: #f7f7f7;
-    padding: 0;
-    margin: 0;
-    color: #646464;
-}
-
-#wrapper {
-    width: 750px;
-    margin: auto;
-}
-
-#content {
-    position: relative;
-    background-color: white;
-    width: 590px;
-    margin: 30px auto 30px auto;
-    padding: 30px 60px 60px 60px;
-    border: 1px solid #d2d2d2;
-}
-
-b, strong {
-    font-weight: 700;
-}
-
-header {
-    text-align: center;
-}
-
-header blockquote {
-    text-align: center;
-    font-size: 22px;
-    line-height: 1.4;
-    padding: 0 10px 0 10px;
-    margin: 25px 15px 40px 15px;
-}
-
-h1, h2 {
-    color: #333333;
-    font-weight: 700;
-}
-
-h1 {
-    padding: 0 100px 0 100px;
-    font-size: 52px;
-    line-height: 1;
-}
-
-h2 {
-    font-size: 26px;
-}
-
-h3 {
-    font-size: 16px;
-    font-weight: 400;
-    color: #b7b7b7;
-}
-
-label {
-    display: block;
-    clear: both;
-    margin: 20px 0 20px 0;
-    font-weight: 400;
-    font-size: 16px;
-}
-
-a {
-    text-decoration: none;
-    color: #59a6d6;
-    outline: none;
-}
-
-a:hover {
-    color: #646464;
-}
-
-:focus {
-    -moz-outline-style: none;
-}
-
-.github img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: 0;
-}
-
-/* BUTTONS */
-/* http://hellohappy.org/css3-buttons/ */
-
-.buttons {
-    margin: 0 auto 40px auto;
-    width: 345px;
-}
-
-.buttons button {
-    margin: 0 10px 0 10px;
-}
-
-button.blue-pill {
-    background-color: #a5b8da;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7bc0eb), color-stop(100%, #59a6d6));
-    background-image: -webkit-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: -moz-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: -ms-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: -o-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: linear-gradient(top, #7bc0eb, #59a6d6);
-    border-top: 1px solid #758fba;
-    border-right: 1px solid #6c84ab;
-    border-bottom: 1px solid #5c6f91;
-    border-left: 1px solid #6c84ab;
-    -webkit-border-radius: 18px;
-    -moz-border-radius: 18px;
-    border-radius: 18px;
-    -webkit-box-shadow: inset 0 1px 0 0 #aec3e5;
-    -moz-box-shadow: inset 0 1px 0 0 #aec3e5;
-    box-shadow: inset 0 1px 0 0 #aec3e5;
-    color: #fff;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 1;
-    padding: 8px 0;
-    text-align: center;
-    text-shadow: 0 -1px 1px #4f768e;
-    text-transform: uppercase;
-    width: 150px;
-}
-
-button.blue-pill:hover {
-    background-color: #9badcc;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #71b1da), color-stop(100%, #478dba));
-    background-image: -webkit-linear-gradient(top, #71b1da, #478dba);
-    background-image: -moz-linear-gradient(top, #71b1da, #478dba);
-    background-image: -ms-linear-gradient(top, #71b1da, #478dba);
-    background-image: -o-linear-gradient(top, #71b1da, #478dba);
-    background-image: linear-gradient(top, #71b1da, #478dba);
-    border-top: 1px solid #4f768e;
-    border-right: 1px solid #4f768e;
-    border-bottom: 1px solid #4f768e;
-    border-left: 1px solid #4f768e;
-    cursor: pointer;
-}
-
-button.blue-pill:active {
-    border: 1px solid #4f768e;
-    -webkit-box-shadow: inset 0 0 8px 2px #5285a5, 0 1px 0 0 #eeeeee;
-    -moz-box-shadow: inset 0 0 8px 2px #5285a5, 0 1px 0 0 #eeeeee;
-    box-shadow: inset 0 0 8px 2px #5285a5, 0 1px 0 0 #eeeeee;
-}
-
-button.blue-pill.deactivated {
-    opacity: .4;
-}
-
-button.blue-pill.deactivated:hover {
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7bc0eb), color-stop(100%, #59a6d6));
-    background-image: -webkit-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: -moz-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: -ms-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: -o-linear-gradient(top, #7bc0eb, #59a6d6);
-    background-image: linear-gradient(top, #7bc0eb, #59a6d6);
-    border-top: 1px solid #758fba;
-    border-right: 1px solid #6c84ab;
-    border-bottom: 1px solid #5c6f91;
-    border-left: 1px solid #6c84ab;
-    cursor: auto;
-}
-
 /******* EXAMPLE A *******/
-
 .br-wrapper .br-widget {
-    height: 52px;
+  height: 50px;
 }
-
 .br-wrapper .br-widget a {
-    display: block;
-    width: 15px;
-    padding: 5px 0 5px 0;
-    height: 30px;
-    float: left;
-    background-color: #e3e3e3;
-    margin: 1px;
-    text-align: center;
+  display: block;
+  width: 15px;
+  padding: 5px 0;
+  height: 30px;
+  float: left;
+  background-color: #fbedd9;
+  margin: 1px;
+  text-align: center;
 }
-
 .br-wrapper .br-widget a.br-active,
 .br-wrapper .br-widget a.br-selected {
-    background-color: #59a6d6;
+  background-color: #edb867;
 }
-
 .br-wrapper .br-widget .br-current-rating {
-    font-size: 20px;
-    line-height: 2;
-    float: left;
-    padding: 0 20px 0 20px;
-    color: #646464;
+  font-size: 20px;
+  line-height: 2;
+  float: left;
+  padding: 0 20px 0 20px;
+  color: #edb867;
+  font-weight: 600;
 }
-
+/* Center in container */
+.br-wrapper {
+  width: 240px;
+  position: absolute;
+  margin: 0px 0 0 -120px;
+  left: 50%;
+}
 /******* EXAMPLE B *******/
-
-.rating-b .br-widget {
-    height: 25px;
+.br-wrapper-b .br-widget {
+  height: 10px;
 }
-
-.rating-b .br-widget a {
-    display: block;
-    width: 70px;
-    height: 16px;
-    float: left;
-    background-color: #e3e3e3;
-    margin: 1px;
+.br-wrapper-b .br-widget a {
+  display: block;
+  width: 80px;
+  height: 10px;
+  float: left;
+  background-color: #bef5e8;
+  margin: 1px;
 }
-
-.rating-b .br-widget a.br-active,
-.rating-b .br-widget a.br-selected {
-    background-color: #59a6d6;
+.br-wrapper-b .br-widget a.br-active,
+.br-wrapper-b .br-widget a.br-selected {
+  background-color: #50e3c2;
 }
-
-.rating-b .br-widget .br-current-rating {
-    line-height: 1.1;
-    float: left;
-    padding: 0 20px 0 20px;
-    color: #646464;
+.br-wrapper-b .br-widget .br-current-rating {
+  clear: both;
+  width: 330px;
+  text-align: center;
+  font-weight: 600;
+  display: block;
+  padding: .5em 0;
+  color: #50e3c2;
 }
-
-.rating-b .br-readonly a.br-active,
-.rating-b .br-readonly a.br-selected {
-    background-color: #cbcbcb;
+.br-wrapper-b .br-readonly a.br-active,
+.br-wrapper-b .br-readonly a.br-selected {
+  background-color: #50e3c2;
 }
-
+/* Center in container */
+.br-wrapper-b {
+  width: 336px;
+  position: absolute;
+  margin: 0px 0 0 -168px;
+  left: 50%;
+}
 /******* EXAMPLE C *******/
-
-.rating-c .br-widget {
-    height: 52px;
+.br-wrapper-c .br-widget {
+  height: 15px;
 }
-
-.rating-c .br-widget a {
-    display: block;
-    width: 35px;
-    height: 35px;
-    float: left;
-    background-color: #e3e3e3;
-    margin: 2px;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 2.2;
-    text-align: center;
-    color: #b6b6b6;
+.br-wrapper-c .br-widget a {
+  display: block;
+  width: 35px;
+  height: 35px;
+  float: left;
+  border: 2px solid #bbcefb;
+  background-color: white;
+  margin: 2px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 2.2;
+  text-align: center;
+  color: #bbcefb;
+  font-weight: 600;
 }
-
-.rating-c .br-widget a.br-active,
-.rating-c .br-widget a.br-selected {
-    background-color: #59a6d6;
-    color: white;
+.br-wrapper-c .br-widget a.br-active,
+.br-wrapper-c .br-widget a.br-selected {
+  border: 2px solid #4278f5;
+  color: #4278f5;
 }
-
+.br-wrapper-c .br-widget .br-current-rating {
+  clear: both;
+  width: 330px;
+  text-align: center;
+  font-weight: 600;
+  display: block;
+  padding: .5em 0;
+  color: #646464;
+}
+.br-wrapper-c .br-readonly a.br-active,
+.br-wrapper-c .br-readonly a.br-selected {
+  background-color: #4278f5;
+}
+/* Center in container */
+.br-wrapper-c {
+  width: 220px;
+  position: absolute;
+  margin: 0px 0 0 -110px;
+  left: 50%;
+}
 /******* EXAMPLE D *******/
-
-.rating-d .br-widget {
-    height: 52px;
+.br-wrapper-d .br-widget {
+  height: 15px;
 }
-
-.rating-d .br-widget a {
-    font-size: 14px;
-    display: block;
-    width: 40px;
-    padding: 5px 0 5px 0;
-    height: 30px;
-    float: left;
-    background-color: white;
-    border-bottom: 2px solid #e3e3e3;
-    color: #646464;
-    margin: 1px;
-    text-decoration: none;
-    line-height: 2.1;
-    text-align: center;
+.br-wrapper-d .br-widget a {
+  font-size: 14px;
+  display: block;
+  width: 40px;
+  padding: 5px 0 5px 0;
+  height: 30px;
+  float: left;
+  background-color: white;
+  border-bottom: 2px solid #fbedd9;
+  color: #fbedd9;
+  text-decoration: none;
+  line-height: 2.1;
+  text-align: center;
 }
-
-.rating-d .br-widget a span {
-    color: white;
+.br-wrapper-d .br-widget a.br-active,
+.br-wrapper-d .br-widget a.br-selected {
+  color: #edb867;
+  border-bottom: 2px solid #edb867;
 }
-
-.rating-d .br-widget a.br-active,
-.rating-d .br-widget a.br-selected {
-
-    border-bottom: 2px solid #646464;
+.br-wrapper-d .br-widget a span {
+  color: white;
 }
-
-.rating-d .br-widget a:hover span,
-.rating-d .br-widget a.br-current span {
-    color: #646464;
+.br-wrapper-d .br-widget a:hover span,
+.br-wrapper-d .br-widget a.br-current span {
+  color: #edb867;
 }
-
+.br-wrapper-d .br-widget .br-current-rating {
+  clear: both;
+  width: 330px;
+  text-align: center;
+  font-weight: 600;
+  display: block;
+  padding: .5em 0;
+  color: #edb867;
+}
+.br-wrapper-d .br-readonly a.br-active,
+.br-wrapper-d .br-readonly a.br-selected {
+  background-color: #edb867;
+}
+/* Center in container */
+.br-wrapper-d {
+  width: 324px;
+  position: absolute;
+  margin: 0px 0 0 -162px;
+  left: 50%;
+}
 /******* EXAMPLE E *******/
-
-.rating-e .br-widget a {
-    padding: 5px;
-    color: #646464;
-    text-decoration: none;
-    font-size: 11px;
-    font-weight: 400;
-    line-height: 3;
-    text-align: center;
+.br-wrapper-e .br-widget {
+  height: 15px;
 }
-
-.rating-e .br-widget a.br-active {
-    background-color: #e3e3e3;
-    color: #646464;
+.br-wrapper-e .br-widget a {
+  padding: 8px 16px;
+  background-color: #bef5e8;
+  color: #50e3c2;
+  text-decoration: none;
+  font-size: 13px;
+  line-height: 3;
+  text-align: center;
+  font-weight: 600;
 }
-
-.rating-e .br-widget a.br-selected {
-    background-color: #59a6d6;
-    color: white;
+.br-wrapper-e .br-widget a:first-child {
+  -webkit-border-top-left-radius: 999px;
+  -webkit-border-bottom-left-radius: 999px;
+  -moz-border-radius-topleft: 999px;
+  -moz-border-radius-bottomleft: 999px;
+  border-top-left-radius: 999px;
+  border-bottom-left-radius: 999px;
 }
-
+.br-wrapper-e .br-widget a:last-child {
+  -webkit-border-top-right-radius: 999px;
+  -webkit-border-bottom-right-radius: 999px;
+  -moz-border-radius-topright: 999px;
+  -moz-border-radius-bottomright: 999px;
+  border-top-right-radius: 999px;
+  border-bottom-right-radius: 999px;
+}
+.br-wrapper-e .br-widget a.br-active,
+.br-wrapper-e .br-widget a.br-selected {
+  background-color: #50e3c2;
+  color: white;
+}
+.br-wrapper-e .br-widget .br-current-rating {
+  clear: both;
+  width: 330px;
+  text-align: center;
+  font-weight: 600;
+  display: block;
+  padding: .5em 0;
+  color: #646464;
+}
+.br-wrapper-e .br-readonly a.br-active,
+.br-wrapper-e .br-readonly a.br-selected {
+  background-color: #50e3c2;
+}
+/* Center in container */
+.br-wrapper-e {
+  width: 250px;
+  position: absolute;
+  margin: 0px 0 0 -125px;
+  left: 50%;
+}
 /******* EXAMPLE F *******/
-
-.rating-f .br-widget {
-    height: 24px;
+.br-wrapper-f .br-widget {
+  height: 30px;
 }
-
-.rating-f .br-widget a {
-    background: url('../img/star.png');
-    width: 24px;
-    height: 24px;
-    display: block;
-    float: left;
+.br-wrapper-f .br-widget a {
+  background-image: url("../img/star.png");
+  width: 30px;
+  height: 30px;
+  display: block;
+  float: left;
 }
-
-.rating-f .br-widget a:hover,
-.rating-f .br-widget a.br-active,
-.rating-f .br-widget a.br-selected {
-    background-position: 0 24px;
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .br-wrapper-f .br-widget a {
+    background-image: url("../img/star@2x.png");
+    background-size: 30px 60px;
+  }
 }
-
+.br-wrapper-f .br-widget a:hover,
+.br-wrapper-f .br-widget a.br-active,
+.br-wrapper-f .br-widget a.br-selected {
+  background-position: 0 30px;
+}
+.br-wrapper-f .br-widget .br-current-rating {
+  clear: both;
+  width: 330px;
+  text-align: center;
+  font-weight: 600;
+  display: block;
+  padding: .5em 0;
+  color: #646464;
+}
+.br-wrapper-f .br-readonly a.br-active,
+.br-wrapper-f .br-readonly a.br-selected {
+  background-color: #50e3c2;
+}
+/* Center in container */
+.br-wrapper-f {
+  width: 152px;
+  position: absolute;
+  margin: 0px 0 0 -76px;
+  left: 50%;
+}
 /******* EXAMPLE G *******/
-
-.rating-g .br-widget {
-    height: 25px;
+.br-wrapper-g .br-widget {
+  height: 25px;
 }
-
-.rating-g .br-widget a {
-    display: block;
-    width: 50px;
-    height: 16px;
-    float: left;
-    background-color: #e3e3e3;
-    margin: 1px;
+.br-wrapper-g .br-widget a {
+  display: block;
+  width: 25px;
+  height: 25px;
+  float: left;
+  background-color: #fbedd9;
+  margin: 1px;
 }
-
-.rating-g .br-widget a.br-active,
-.rating-g .br-widget a.br-selected {
-    background-color: #59a6d6;
+.br-wrapper-g .br-widget a.br-active,
+.br-wrapper-g .br-widget a.br-selected {
+  background-color: #edb867;
 }
-
-.rating-g .br-widget .br-current-rating {
-    line-height: 1.1;
-    float: left;
-    padding: 0 20px 0 20px;
-    color: #646464;
+.br-wrapper-g .br-widget .br-current-rating {
+  line-height: 1.5;
+  float: left;
+  padding: 0 20px 0 20px;
+  color: #edb867;
+  font-size: 18px;
 }
-
+.br-wrapper-g .br-readonly a.br-active,
+.br-wrapper-g .br-readonly a.br-selected {
+  background-color: #edb867;
+}
+/* Center in container */
+.br-wrapper-g {
+  padding-top: 1.3em;
+  width: 380px;
+  position: absolute;
+  margin: 0px 0 0 -190px;
+  left: 50%;
+}
 /******* EXAMPLE H *******/
-
-.rating-h .br-widget {
-    width: 25px;
+.br-wrapper-h .br-widget {
+  width: 120px;
 }
-
-.rating-h .br-widget a {
-    display: block;
-    width: 25px;
-    height: 25px;
-    background-color: #e3e3e3;
-    margin: 1px;
+.br-wrapper-h .br-widget a {
+  display: block;
+  width: 120px;
+  height: 5px;
+  background-color: #bef5e8;
+  margin: 1px;
 }
-
-.rating-h .br-widget a.br-active,
-.rating-h .br-widget a.br-selected {
-    background-color: #59a6d6;
+.br-wrapper-h .br-widget a.br-active,
+.br-wrapper-h .br-widget a.br-selected {
+  background-color: #50e3c2;
 }
-
-.rating-h .br-widget .br-current-rating {
-    width: 25px;
-    text-align: center;
-    color: #646464;
+.br-wrapper-h .br-widget .br-current-rating {
+  width: 120px;
+  font-weight: 600;
+  line-height: 2;
+  text-align: center;
+  color: #50e3c2;
 }
+.br-wrapper-h .br-readonly a.br-active,
+.br-wrapper-h .br-readonly a.br-selected {
+  background-color: #50e3c2;
+}
+/* Center in container */
+.br-wrapper-h {
+  width: 120px;
+  position: absolute;
+  margin: 0px 0 0 -60px;
+  left: 50%;
+}
+/******* BOX *******/
+.box {
+  width: 100%;
+  float: left;
+  margin: 1em 0;
+}
+.box .box-header {
+  text-align: center;
+  font-weight: 600;
+  padding: .5em 0;
+}
+.box .box-body {
+  padding-top: 2em;
+  height: 85px;
+  /* rating widgets will be absolutely centered relative to box body */
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (min-device-pixel-ratio : 1.5),
-(min-resolution: 192dpi) {
-    .rating-f .br-widget a {
-        background: url('../img/star@2x.png');
-        background-size: 24px 48px;
-    }
+  position: relative;
+}
+.box select {
+  width: 120px;
+  margin: 10px auto 0 auto;
+  display: block;
+}
+.box-large .box-body {
+  padding-top: 2em;
+  height: 120px;
+}
+.box-orange .box-header {
+  background-color: #edb867;
+  color: white;
+}
+.box-orange .box-body {
+  background-color: white;
+  border: 2px solid #f5d8ab;
+  border-top: 0;
+}
+.box-green .box-header {
+  background-color: #50e3c2;
+  color: white;
+}
+.box-green .box-body {
+  background-color: white;
+  border: 2px solid #92eed9;
+  border-top: 0;
+}
+.box-blue .box-header {
+  background-color: #4278f5;
+  color: white;
+}
+.box-blue .box-body {
+  background-color: white;
+  border: 2px solid #8bacf9;
+  border-top: 0;
 }
