prevent font boosting on demo page

--- a/examples/css/main.css
+++ b/examples/css/main.css
@@ -184,6 +184,9 @@ a:focus {
 .section-intro {
   text-align: center;
   margin: 3em 0 4em 0;
+  max-height: 9999px;
+  /* no font boosting please */
+
 }
 .section-intro h1 {
   line-height: 2.4;
@@ -214,6 +217,9 @@ a:focus {
 .docs {
   width: 800px;
   margin: auto;
+  max-height: 9999px;
+  /* no font boosting please */
+
 }
 .docs header {
   text-align: center;
