--- a/examples/less/main.less
+++ b/examples/less/main.less
@@ -201,6 +201,7 @@ a {
 .section-intro {
     text-align: center;
     margin: 3em 0 4em 0;
+    max-height: 9999px; /* no font boosting please */
 
     h1 {
         line-height: 2.4;
@@ -257,6 +258,7 @@ a {
 .docs {
     width: 800px;
     margin: auto;
+    max-height: 9999px; /* no font boosting please */
 
     header {
         text-align: center;
