--- a/themes/variables.less
+++ b/themes/variables.less
@@ -1,3 +1,8 @@
+// Bars
+@orange-color: #EDB867;
+@green-color: #50E3C2;
+@blue-color: #4278F5;
+
 // Stars
 @star-default: #ddd;
 @star-active: #ffdf88;
