--- a/examples/less/main.less
+++ b/examples/less/main.less
@@ -103,7 +103,7 @@ body {
     font-family: @fontFamily;
     color: @textColor;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 1.25em; /* 20px */
     line-height: 1.6;
 }
 
@@ -113,7 +113,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 2.8em;
+    font-size: 2.8em; /* 56px */
     margin: 0;
 }
 
@@ -125,7 +125,7 @@ pre {
 
 code {
     font-family: @fontFamilyMonospaced;
-    font-size: 18px;
+    font-size: 0.9em; /* 18px */
     color: @blueColor;
 }
 
@@ -169,7 +169,7 @@ a {
     display: block;
     margin: auto;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 0.6em; /* 12px */
     line-height: 5.5;
     letter-spacing: 2px;
     margin-bottom: 7em;
@@ -213,7 +213,8 @@ a {
     }
 
     p.tagline {
-        font-size: 14px;
+        font-size: 0.8em; /* 16px */
+        color: lighten(@textColor, 20%);
         margin-bottom: 3em;
     }
 }
@@ -230,6 +231,10 @@ a {
 
     .col {
         width: 50%;
+    }
+
+    .col-fullwidth {
+        width: 100%;
     }
 }
 
@@ -262,12 +267,13 @@ a {
 
     header {
         text-align: center;
-        padding: .8em 0;
-        letter-spacing: 5px;
+        padding: 1em 0;
+        letter-spacing: 3px;
         text-transform: uppercase;
         font-weight: 600;
         color: white;
         width: 100%;
+        font-size: .9em;
     }
 
     .how-to-use, .callbacks {
@@ -300,7 +306,7 @@ a {
         background-color: @greenColor;
         color: white;
         float: left;
-        padding: .4em 1em .5em 1em;
+        padding: .3em 1em .5em 1em;
         text-decoration: none;
         text-align: center;
         font-weight: 600;
