--- a/examples/less/examples.less
+++ b/examples/less/examples.less
@@ -1,413 +1,89 @@
-@import "_vars";
-@import "_retina";
+@import "variables.less";
 
-/******* EXAMPLE A *******/
+/* Center ratings in container */
 
-.br-wrapper {
-    .br-widget {
-        height: 50px;
-
-        a {
-            display: block;
-            width: 15px;
-            padding: 5px 0;
-            height: 30px;
-            float: left;
-            background-color: lighten(@orangeColor, 25%);
-            margin: 1px;
-            text-align: center;
-
-            &.br-active,
-            &.br-selected {
-                background-color: @orangeColor;
-            }
-        }
-
-        .br-current-rating {
-            font-size: 20px;
-            line-height: 2;
-            float: left;
-            padding: 0 20px 0 20px;
-            color: @orangeColor;
-            font-weight: 600;
-        }
-    }
-}
-
-/* Center in container */
-
-.br-wrapper {
-    width: 240px;
+.box-example-1to10 .br-wrapper {
+    width: 210px;
     position: absolute;
-    margin: 0px 0 0 -120px;
+    margin: 0px 0 0 -105px;
     left: 50%;
 }
 
-/******* EXAMPLE B *******/
-
-.br-wrapper-b {
-    .br-widget {
-        height: 10px;
-
-        a {
-            display: block;
-            width: 80px;
-            height: 10px;
-            float: left;
-            background-color: lighten(@greenColor, 25%);
-            margin: 1px;
-
-            &.br-active,
-            &.br-selected {
-                background-color: @greenColor;
-            }
-        }
-
-        .br-current-rating {
-            clear: both;
-            width: 330px;
-            text-align: center;
-            font-weight: 600;
-            display: block;
-            padding: .5em 0;
-            color: @greenColor;
-        }
-    }
-
-    .br-readonly a.br-active,
-    .br-readonly a.br-selected {
-        background-color: @greenColor;
-    }
-}
-
-/* Center in container */
-
-.br-wrapper-b {
-    width: 336px;
-    position: absolute;
-    margin: 0px 0 0 -168px;
-    left: 50%;
-}
-
-/******* EXAMPLE C *******/
-
-.br-wrapper-c {
-    .br-widget {
-        height: 15px;
-
-        a {
-            display: block;
-            width: 35px;
-            height: 35px;
-            float: left;
-            border: 2px solid lighten(@blueColor, 25%);
-            background-color: white;
-            margin: 2px;
-            text-decoration: none;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 2.2;
-            text-align: center;
-            color: lighten(@blueColor, 25%);
-            font-weight: 600;
-
-            &.br-active,
-            &.br-selected {
-                border: 2px solid @blueColor;
-                color: @blueColor;
-            }
-        }
-
-        .br-current-rating {
-            clear: both;
-            width: 330px;
-            text-align: center;
-            font-weight: 600;
-            display: block;
-            padding: .5em 0;
-            color: #646464;
-        }
-    }
-
-    .br-readonly a.br-active,
-    .br-readonly a.br-selected {
-        background-color: @blueColor;
-    }
-}
-
-/* Center in container */
-
-.br-wrapper-c {
-    width: 220px;
-    position: absolute;
-    margin: 0px 0 0 -110px;
-    left: 50%;
-}
-
-/******* EXAMPLE D *******/
-
-.br-wrapper-d {
-    .br-widget {
-        height: 15px;
-
-        a {
-            font-size: 14px;
-            display: block;
-            width: 40px;
-            padding: 5px 0 5px 0;
-            height: 30px;
-            float: left;
-            background-color: white;
-            border-bottom: 2px solid lighten(@orangeColor, 25%);
-            color: lighten(@orangeColor, 25%);
-            text-decoration: none;
-            line-height: 2.1;
-            text-align: center;
-
-            &.br-active,
-            &.br-selected {
-                color: @orangeColor;
-                border-bottom: 2px solid @orangeColor;
-            }
-
-            span {
-                color: white;
-            }
-
-            &:hover span,
-            &.br-current span {
-                color: @orangeColor;
-            }
-        }
-
-        .br-current-rating {
-            clear: both;
-            width: 330px;
-            text-align: center;
-            font-weight: 600;
-            display: block;
-            padding: .5em 0;
-            color: @orangeColor;
-        }
-    }
-
-    .br-readonly a.br-active,
-    .br-readonly a.br-selected {
-        background-color: @orangeColor;
-    }
-}
-
-/* Center in container */
-
-.br-wrapper-d {
-    width: 324px;
-    position: absolute;
-    margin: 0px 0 0 -162px;
-    left: 50%;
-}
-
-/******* EXAMPLE E *******/
-
-.br-wrapper-e {
-    .br-widget {
-        height: 15px;
-
-        a {
-            padding: 8px 16px;
-            background-color: lighten(@greenColor, 25%);
-            color: @greenColor;
-            text-decoration: none;
-            font-size: 13px;
-            line-height: 3;
-            text-align: center;
-            font-weight: 600;
-
-            &:first-child {
-                -webkit-border-top-left-radius: 999px;
-                -webkit-border-bottom-left-radius: 999px;
-                -moz-border-radius-topleft: 999px;
-                -moz-border-radius-bottomleft: 999px;
-                border-top-left-radius: 999px;
-                border-bottom-left-radius: 999px;
-            }
-
-            &:last-child {
-                -webkit-border-top-right-radius: 999px;
-                -webkit-border-bottom-right-radius: 999px;
-                -moz-border-radius-topright: 999px;
-                -moz-border-radius-bottomright: 999px;
-                border-top-right-radius: 999px;
-                border-bottom-right-radius: 999px;
-            }
-
-            &.br-active,
-            &.br-selected {
-                background-color: @greenColor;
-                color: white;
-            }
-        }
-
-        .br-current-rating {
-            clear: both;
-            width: 330px;
-            text-align: center;
-            font-weight: 600;
-            display: block;
-            padding: .5em 0;
-            color: #646464;
-        }
-    }
-
-    .br-readonly a.br-active,
-    .br-readonly a.br-selected {
-        background-color: @greenColor;
-    }
-}
-
-/* Center in container */
-
-.br-wrapper-e {
+.box-example-movie .br-wrapper {
     width: 250px;
     position: absolute;
     margin: 0px 0 0 -125px;
     left: 50%;
 }
 
-/******* EXAMPLE F *******/
-
-.br-wrapper-f {
-    .br-widget {
-        height: 30px;
-
-        a {
-            .retina-image('../img/star.png', '../img/star@2x.png', 30px, 60px);
-            width: 30px;
-            height: 30px;
-            display: block;
-            float: left;
-
-            &:hover,
-            &.br-active,
-            &.br-selected {
-                background-position: 0 30px;
-            }
-        }
-
-        .br-current-rating {
-            clear: both;
-            width: 330px;
-            text-align: center;
-            font-weight: 600;
-            display: block;
-            padding: .5em 0;
-            color: #646464;
-        }
-    }
-
-    .br-readonly a.br-active,
-    .br-readonly a.br-selected {
-        background-color: @greenColor;
-    }
-}
-
-/* Center in container */
-
-.br-wrapper-f {
-    width: 152px;
+.box-example-square .br-wrapper {
+    width: 190px;
     position: absolute;
-    margin: 0px 0 0 -76px;
+    margin: 0px 0 0 -95px;
     left: 50%;
 }
 
-/******* EXAMPLE G *******/
-
-.br-wrapper-g {
-    .br-widget {
-        height: 25px;
-
-        a {
-            display: block;
-            width: 25px;
-            height: 25px;
-            float: left;
-            background-color: lighten(@orangeColor, 25%);
-            margin: 1px;
-
-            &.br-active,
-            &.br-selected {
-                background-color: @orangeColor;
-            }
-        }
-
-        .br-current-rating {
-            line-height: 1.5;
-            float: left;
-            padding: 0 20px 0 20px;
-            color: @orangeColor;
-            font-size: 18px;
-        }
-    }
-
-    .br-readonly a.br-active,
-    .br-readonly a.br-selected {
-        background-color: @orangeColor;
-    }
+.box-example-pill .br-wrapper {
+    width: 232px;
+    position: absolute;
+    margin: 0px 0 0 -116px;
+    left: 50%;
 }
 
-/* Center in container */
-
-.br-wrapper-g {
+.box-example-reversed .br-wrapper {
     padding-top: 1.3em;
-    width: 380px;
+    width: 356px;
     position: absolute;
-    margin: 0px 0 0 -190px;
+    margin: 0px 0 0 -178px;
     left: 50%;
 }
 
-/******* EXAMPLE H *******/
-
-.br-wrapper-h {
-    .br-widget {
-        width: 120px;
-
-        a {
-            display: block;
-            width: 120px;
-            height: 5px;
-            background-color: lighten(@greenColor, 25%);
-            margin: 1px;
-
-            &.br-active,
-            &.br-selected {
-                background-color: @greenColor;
-            }
-        }
-
-        .br-current-rating {
-            width: 120px;
-            font-weight: 600;
-            line-height: 2;
-            text-align: center;
-            color: @greenColor;
-        }
-    }
-
-    .br-readonly a.br-active,
-    .br-readonly a.br-selected {
-        background-color: @greenColor;
-    }
-}
-
-/* Center in container */
-
-.br-wrapper-h {
+.box-example-horizontal .br-wrapper {
     width: 120px;
     position: absolute;
     margin: 0px 0 0 -60px;
     left: 50%;
 }
 
-/******* BOX *******/
+/* Display star ratings */
+
+.star-ratings {
+    h1 {
+        font-size: 1.5em;
+        margin-top: 3em;
+        color: @textColor;
+    }
+
+    p {
+        margin-bottom: 3em;
+        line-height: 1.2;
+    }
+
+    h1, p {
+        text-align: center;
+    }
+
+    select {
+        width: 120px;
+        font-size: 16px;
+    }
+
+    .stars {
+        width: 120px;
+        float: left;
+        text-align: center;
+        margin: auto;
+        padding: 0 95px;
+
+        .title {
+            font-size: 14px;
+            color: #cccccc;
+            line-height: 3;
+        }
+    }
+}
+
+/* Boxes */
 
 .box {
     width: 100%;
@@ -432,6 +108,7 @@
         width: 120px;
         margin: 10px auto 0 auto;
         display: block;
+        font-size: 16px;
     }
 }
 
