Bringing back retina image mixin

--- a/examples/less/main.less
+++ b/examples/less/main.less
@@ -96,8 +96,8 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-@import "_vars";
-@import "_retina";
+@import "variables.less";
+@import "retina-image.less";
 
 body {
     font-family: @fontFamily;
