--- a/themes/bars-1to10.less
+++ b/themes/bars-1to10.less
@@ -32,3 +32,24 @@
   }
 
 }
+
+@media print {
+  .br-theme-bars-1to10 {
+
+    .br-widget {
+      a {
+        background: lighten(black, 70%);
+
+        &.br-active,
+        &.br-selected {
+          background: black;
+        }
+      }
+
+      .br-current-rating {
+        color: black;
+      }
+    }
+
+  }
+}
