--- a/themes/fontawesome-stars.less
+++ b/themes/fontawesome-stars.less
@@ -32,3 +32,22 @@
   }
 
 }
+
+@media print {
+  .br-theme-fontawesome-stars {
+
+    .br-widget {
+      a:after {
+        content: '\f006';
+        color: black;
+      }
+
+      a.br-active:after,
+      a.br-selected:after {
+        content: '\f005';
+        color: black;
+      }
+    }
+
+  }
+}
